atualização github e pasta

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <H2>BEM-VINDO À <SPAn>OCEANIS</SPAn>!</H2>
             <p>Aqui você encontra fichas informativas e curiosidades sobre o maior mamífero dos oceanos! Um projeto
                 educacional para os amantes da natureza.</p>
-                <a href="https://github.com/2C-LIA-04"><button>ACESSE MEU GITHUB</button></a>
+                <a href="https://github.com/3C-ANAJ-IN"><button>ACESSE MEU GITHUB</button></a>
         </div>
     </div>
 
