--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <div class="inicio">
-        <img id='whaleinicio' src="firstwhale.png" alt="">
+        <img id='whaleinicio' src="icones/firstwhale.png"alt="">
         <div class="texto">
             <H2>BEM-VINDO À <SPAn>OCEANIS</SPAn>!</H2>
             <p>Aqui você encontra fichas informativas e curiosidades sobre o maior mamífero dos oceanos! Um projeto
